# quant-execution-engine

./: .env.example  .envrc.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml  pytest.ini  quant-execution-engine.txt
.github/workflows/: namespace-source-export-pr.yml  tests.yml  tests.yml.disabled  update-toc.yml
config/: template.yaml
docs/: README.md  afml-execution-policy.md  alpaca-paper-smoke.md  architecture.md  cli.md  configuration.md  current-capabilities.md  durable-execution-journal.md  execution-checklist.md  execution-foundation.md  execution-recovery-matrix.md  execution-transport.md  ibkr-paper-smoke.md  longport-paper-failure-smoke.md  longport-real-smoke.md  paper-digest.md  research-handoff-governance.md  targets.md  testing.md  typed-execution-domain.md  vnpy-transport.md
docs/archive/: README.md  type-gate-migration-20260601.md
examples/: targets.local-dry-run.json
openspec/changes/add-ibkr-paper-support/: README.md  design.md  proposal.md  tasks.md
openspec/changes/align-project-facts-and-maintenance-debt/: design.md  proposal.md  tasks.md
openspec/changes/harden-paper-operator-workflow/: design.md  proposal.md  tasks.md
openspec/changes/separate-research-ai-execution/: design.md  proposal.md  tasks.md
openspec/changes/strengthen-execution-foundation/: README.md  design.md  proposal.md  tasks.md
openspec/changes/tighten-execution-completion-line/: README.md  design.md  proposal.md  tasks.md
project_tools/: account_cash_info_fetch.py  account_fund_info_fetch.py  account_stock_info_fetch.py  create_data_previews.py  export_repo_source.py  package.sh  smoke_operator_harness.py  smoke_signal_harness.py  smoke_target_harness.py  validate_ai_pick_jsons.py
scripts/: rebuild_db.sh
scripts/dev/: maintainability_metrics.py
sql/: indexes_prices.sql  schema_prices.sql
src/quant_execution_engine/: __init__.py  __main__.py  _journal_codec.py  _journal_domain.py  _journal_reducer.py  _journal_sqlite.py  _journal_sqlite_core.py  _recovery_fault_harness.py  _recovery_fault_support.py  _serialization_common.py  _serialization_v1.py  _serialization_v2.py  _vnpy_bindings.py  _vnpy_mapper.py  account.py  broker_transport.py  cli.py  cli_parser.py  config.py  diagnostics.py  domain.py  evidence_bundle.py  evidence_maturity.py  execution.py  execution_helpers.py  execution_journal.py  execution_policy.py  execution_service.py  execution_service_recovery.py  execution_service_recovery_actions.py  execution_service_state_reconcile_ops.py  execution_state.py  facade.py  fees.py  fx.py  guards.py  handoff_audit.py  health.py  logging.py  models.py  (+13 more)
src/quant_execution_engine/broker/: __init__.py  _stubs.py  alpaca.py  base.py  factory.py  ibkr.py  ibkr_runtime.py  local_dry_run.py  longport.py  longport_adapter.py  longport_credentials.py  longport_support.py
src/quant_execution_engine/renderers/: __init__.py  diff.py  jsonout.py  table.py
src/stock_analysis/: cli.py
src/stock_analysis/ai_lab/: __init__.py
src/stock_analysis/ai_lab/backtest/: __init__.py  quarterly_ai_pick.py
src/stock_analysis/ai_lab/selection/: __init__.py  ai_stock_pick.py
src/stock_analysis/app/: __init__.py  cli.py
src/stock_analysis/app/commands/: __init__.py  ai_pick.py  backtest.py  export.py  gen_whitelist.py  lb_account.py  lb_config.py  lb_quote.py  lb_rebalance.py  load_data.py  preliminary.py  result.py  risk_free.py  targets.py  validate_exports.py
src/stock_analysis/contracts/: __init__.py  portfolio_json.py  targets.py
src/stock_analysis/execution/: __init__.py
src/stock_analysis/execution/broker/: __init__.py  longport_client.py
src/stock_analysis/execution/renderers/: __init__.py  diff.py  jsonout.py  table.py
src/stock_analysis/execution/services/: __init__.py  account_snapshot.py  rebalancer.py
src/stock_analysis/research/: __init__.py
src/stock_analysis/research/backtest/: __init__.py  engine.py  prep.py
src/stock_analysis/research/data/: __init__.py  load_data_to_db.py
src/stock_analysis/research/selection/: __init__.py  preliminary_selection.py
src/stock_analysis/shared/: __init__.py
src/stock_analysis/shared/config/: __init__.py
src/stock_analysis/shared/io/: excel.py
src/stock_analysis/shared/logging/: __init__.py
src/stock_analysis/shared/services/: __init__.py  exports.py
src/stock_analysis/shared/services/marketdata/: __init__.py  (+1 more)
src/stock_analysis/shared/utils/: __init__.py  fx.py  paths.py
tests/: test_afml_execution_policy.py  test_documentation_entrypoints.py  test_maintainability_metrics.py
tests/e2e/: test_cli_lb_e2e.py  test_cli_longport_e2e.py  test_cli_smoke.py  test_smoke_harnesses.py
tests/integration/: test_ai_integration_stub.py  test_db_io.py  test_engine_core.py  test_execution_foundation_integration.py  test_ibkr_paper_integration.py  test_longbridge_quote_integration.py  test_longport_quote_integration.py  test_price_data_completeness.py
tests/unit/: test_account_snapshot_service.py  test_ai_result_parsing.py  test_alpaca_adapter.py  test_broker_package_exports.py  test_cli_lb_commands.py  test_cli_longport_commands.py  test_config.py  test_diagnostics.py  test_dividend_reinvestment.py  test_docs_consistency.py  test_durable_execution_journal.py  test_evidence_bundle.py  test_evidence_maturity.py  test_execution_foundation.py  test_execution_recovery_matrix.py  test_execution_transport.py  test_getenv_both.py  test_guards.py  test_ibkr_adapter.py  test_intraday_handoff.py  test_lb_account_output.py  test_load_data_branches.py  test_longbridge_client_unit.py  test_longbridge_static.py  test_longbridge_symbols.py  test_longport_account_output.py  test_longport_adapter.py  test_longport_client_unit.py  test_longport_credentials.py  test_longport_symbols.py  test_operator_recovery_guidance.py  test_paths_logging.py  test_pe_sector_alpha.py  test_portfolio_constituents.py  test_portfolios_load.py  test_preliminary_selection.py  test_rebalancer_helpers.py  test_report_generation.py  test_risk_degradation_summary.py  test_risk_free_service.py  (+7 more)
(+20 files in other folders)
