[project]
name = "quant-execution-engine"
version = "0.2.0"
requires-python = ">=3.10, <3.13"

dependencies = [
  "pyyaml",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov",
  "ruff>=0.5",
  "mypy>=1.10",
  "basedpyright>=1.39.9",
  "types-PyYAML",
  "ty>=0.0.55",
]

[project.optional-dependencies]
cli = ["rich>=13"]
longport = ["longport>=0.2.77"]
alpaca = ["alpaca-py", "pytz"]
ibkr = ["ib-insync>=0.9.86"]
vnpy = ["vnpy>=4.4,<5"]
full = [
  "longport>=0.2.77",
  "alpaca-py",
  "pytz",
  "ib-insync>=0.9.86",
  "vnpy>=4.4,<5",
]

[project.scripts]
stockq = "quant_execution_engine.cli:app"
qexec = "quant_execution_engine.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["quant_execution_engine*"]

[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# Select rule sets to enable.
# "E", "F" correspond to Flake8's native rules.
# "I" corresponds to isort.
# "UP" corresponds to pyupgrade.
select = ["E", "F", "I", "UP", "B"] # B is flake8-bugbear

# Or, enable all rules and then ignore the ones you don't need
# select = ["ALL"]
# ignore = ["D100", "D101"] # Ignore specific rules

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.basedpyright]
include = ["src/quant_execution_engine"]
exclude = [
  ".venv",
  "outputs",
  "build",
  "dist",
]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = false
reportMissingTypeStubs = false

[tool.ty.src]
include = [
  "src/quant_execution_engine/domain.py",
  "src/quant_execution_engine/_journal_codec.py",
  "src/quant_execution_engine/_journal_domain.py",
  "src/quant_execution_engine/_journal_reducer.py",
  "src/quant_execution_engine/_journal_sqlite_core.py",
  "src/quant_execution_engine/_journal_sqlite.py",
  "src/quant_execution_engine/execution_journal.py",
  "src/quant_execution_engine/transport.py",
  "src/quant_execution_engine/broker_transport.py",
  "src/quant_execution_engine/paper_transport.py",
  "src/quant_execution_engine/transport_service.py",
  "src/quant_execution_engine/_vnpy_bindings.py",
  "src/quant_execution_engine/_vnpy_mapper.py",
  "src/quant_execution_engine/vnpy_transport.py",
  "src/quant_execution_engine/recovery_matrix.py",
  "src/quant_execution_engine/_recovery_fault_support.py",
  "src/quant_execution_engine/_recovery_fault_harness.py",
  "src/quant_execution_engine/_serialization_common.py",
  "src/quant_execution_engine/_serialization_v1.py",
  "src/quant_execution_engine/_serialization_v2.py",
  "src/quant_execution_engine/serialization.py",
  "src/quant_execution_engine/targets.py",
  "src/quant_execution_engine/risk.py",
  "src/quant_execution_engine/preflight.py",
  "src/quant_execution_engine/rebalance.py",
  "src/quant_execution_engine/execution_state.py",
  "src/quant_execution_engine/broker/base.py",
  "src/quant_execution_engine/execution_service.py",
  "src/quant_execution_engine/cli.py",
]
exclude = [
  ".venv",
  "outputs",
  "build",
  "dist",
]

[tool.ty.rules]
redundant-cast = "ignore"
unresolved-import = "ignore"

[tool.maintainability.quality_targets]
basedpyright_include_targets = [
  "src/quant_execution_engine/domain.py",
  "src/quant_execution_engine/_journal_codec.py",
  "src/quant_execution_engine/_journal_domain.py",
  "src/quant_execution_engine/_journal_reducer.py",
  "src/quant_execution_engine/_journal_sqlite_core.py",
  "src/quant_execution_engine/_journal_sqlite.py",
  "src/quant_execution_engine/execution_journal.py",
  "src/quant_execution_engine/transport.py",
  "src/quant_execution_engine/broker_transport.py",
  "src/quant_execution_engine/paper_transport.py",
  "src/quant_execution_engine/transport_service.py",
  "src/quant_execution_engine/_vnpy_bindings.py",
  "src/quant_execution_engine/_vnpy_mapper.py",
  "src/quant_execution_engine/vnpy_transport.py",
  "src/quant_execution_engine/recovery_matrix.py",
  "src/quant_execution_engine/_recovery_fault_support.py",
  "src/quant_execution_engine/_recovery_fault_harness.py",
  "src/quant_execution_engine/_serialization_common.py",
  "src/quant_execution_engine/_serialization_v1.py",
  "src/quant_execution_engine/_serialization_v2.py",
  "src/quant_execution_engine/serialization.py",
  "src/quant_execution_engine/targets.py",
  "src/quant_execution_engine/risk.py",
  "src/quant_execution_engine/preflight.py",
  "src/quant_execution_engine/rebalance.py",
  "src/quant_execution_engine/execution_state.py",
  "src/quant_execution_engine/broker/base.py",
  "src/quant_execution_engine/execution_service.py",
  "src/quant_execution_engine/cli.py",
]
mypy_advisory_targets = [
  "src/quant_execution_engine/domain.py",
  "src/quant_execution_engine/_journal_codec.py",
  "src/quant_execution_engine/_journal_domain.py",
  "src/quant_execution_engine/_journal_reducer.py",
  "src/quant_execution_engine/_journal_sqlite_core.py",
  "src/quant_execution_engine/_journal_sqlite.py",
  "src/quant_execution_engine/execution_journal.py",
  "src/quant_execution_engine/transport.py",
  "src/quant_execution_engine/broker_transport.py",
  "src/quant_execution_engine/paper_transport.py",
  "src/quant_execution_engine/transport_service.py",
  "src/quant_execution_engine/_vnpy_bindings.py",
  "src/quant_execution_engine/_vnpy_mapper.py",
  "src/quant_execution_engine/vnpy_transport.py",
  "src/quant_execution_engine/recovery_matrix.py",
  "src/quant_execution_engine/_recovery_fault_support.py",
  "src/quant_execution_engine/_recovery_fault_harness.py",
  "src/quant_execution_engine/_serialization_common.py",
  "src/quant_execution_engine/_serialization_v1.py",
  "src/quant_execution_engine/_serialization_v2.py",
  "src/quant_execution_engine/serialization.py",
  "src/quant_execution_engine/targets.py",
  "src/quant_execution_engine/risk.py",
  "src/quant_execution_engine/preflight.py",
  "src/quant_execution_engine/rebalance.py",
  "src/quant_execution_engine/execution_state.py",
  "src/quant_execution_engine/broker/base.py",
  "src/quant_execution_engine/execution_service.py",
  "src/quant_execution_engine/cli.py",
]

[[tool.mypy.overrides]]
module = [
  "longbridge.*",
  "longport.*",
  "rich.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/quant_execution_engine"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration and not e2e and not slow'"
markers = [
  "unit: fast, isolated tests",
  "integration: tests that touch external APIs or DB",
  "e2e: end-to-end workflow tests",
  "slow: long-running tests",
  "requires_api: needs external API access",
  "requires_db: needs database access",
]
filterwarnings = [
  "error::DeprecationWarning",
  "ignore:.*distutils.*:DeprecationWarning",
]
